/* -------------------- Plugins and Toolchain -------------------- */
plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

/* -------------------- Repositories -------------------- */
repositories {
    mavenCentral()
    maven { url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/" }
    maven { url "https://bio.informatik.uni-jena.de/repository/libs-release-oss/" }
    maven { url "https://artifactory.cronapp.io/public-release/" }
}

/* -------------------- Dependencies -------------------- */
dependencies {
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'commons-io:commons-io:2.14.0'
    implementation 'org.biojava:biojava-core:5.3.0'
    implementation 'org.biojava:biojava-genome:5.3.0'
    implementation 'org.apache.commons:commons-text:1.14.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
    implementation 'org.slf4j:slf4j-nop:2.0.17'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.google.code.gson:gson-extras:2.8.5'
    implementation 'com.google.guava:guava:33.4.8-android'
    implementation 'com.github.samtools:htsjdk:4.1.3'
    implementation 'com.github.java-json-tools:json-schema-validator:2.2.14'
    implementation 'org.ehcache:ehcache:3.11.1'
    implementation 'uk.co.omega-prime:btreemap:1.2.0'
    implementation 'tech.tablesaw:tablesaw-core:0.44.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.0'
}

dependencyLocking {
    lockAllConfigurations()
}

/* -------------------- Project Metadata -------------------- */
version 'v2.4.2'
group 'de.tue.cs.ibmi.it'

println "Name: $name"
println "Project directory: $projectDir"
println "Build directory: $buildDir"
println "Version: $version"
println "Group: $project.group"
println "AntBuilder: $ant"

/* -------------------- Task Definitions -------------------- */
tasks.withType(Test) {
    useJUnitPlatform()
}

tasks.named('processResources') {
    dependsOn tasks.named('unpackSnpEff')
}

tasks.named('jar') {
    dependsOn tasks.named('unpackSnpEff')
}

tasks.register('unpackSnpEff', Copy) {
    from zipTree('src/main/resources/snpEff.zip')
    into 'src/main/resources/'
}

tasks.register('copyJarToReleases', Copy) {
    mkdir 'releases'
    def jarName = "build/libs/" + rootProject.name + "-" + version + ".jar"
    from jarName
    into "releases"
}

/* -------------------- Source Sets and Resource Processing -------------------- */
sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            srcDir 'src/main/resources'
        }
    }
}

processResources {
    duplicatesStrategy 'exclude'
    exclude('*.zip')
    filesMatching('version.properties') {
        expand projectVersion: version
    }
    filesMatching('title.properties') {
        expand projectTitle: rootProject.name
    }
}

/* -------------------- Jar Configuration -------------------- */
jar {
    duplicatesStrategy 'exclude'
    manifest {
        attributes("Implementation-Title": rootProject.name,
                "Implementation-Version": archiveVersion,
                "Main-Class": "main.Musial")
    }
    doFirst {
        from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    }
}

/* -------------------- Build Finalization and Cleanup -------------------- */
clean.doFirst {
    delete "${rootDir}/releases/"
    delete "${rootDir}/build/"
    delete "${rootDir}/src/main/resources/snpEff"
}

build.finalizedBy(copyJarToReleases)